--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <div>
                     <i class="fa-solid fa-pen-nib"></i>                    
                     <h2>Graphic Design</h2>
-                    <p>dTransforming ideas into captivating visuals, from eye-catching logos to 
+                    <p>Transforming ideas into captivating visuals, from eye-catching logos to 
                         engaging marketing materials, effectively communicating messages and 
                         leaving lasting impressions.</p>
                     <a href="https://janeilchantelle.portfoliobox.net">View my portfolio here</a>
