--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     with ongoing exploration into Java, databases, AWS Cloud development, and cybersecurity practices. 
                                     This comprehensive approach ensures a diverse skill set, 
                                     blending creativity seamlessly with advanced technological expertise. </li>
-                                <li><span>entrepreneurship</span><br>Founded and operated Wicked Kitchen, a successful venture 
+                                <li><span>Entrepreneurship</span><br>Founded and operated Wicked Kitchen, a successful venture 
                                     in the niche market of vegan cuisine. Developed a comprehensive business plan, orchestrated the launch 
                                     of an e-commerce platform, and maintained sales across six local retail stores and online channels. Oversaw all aspects of the
                                      business, including social media management, accounting, marketing, and production. Demonstrated a hands-on approach to entrepreneurship by effectively 
