--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <h3>Database Management</h3>
                     <p>Proficient in organizing, storing, and retrieving data using MySQL, complemented by expertise 
                         in crafting Entity-Relationship Diagrams 
-                        and utilizing PageAdmin for optimal application functionality and intelligent decision support.</p>
+                        and utilizing PgAdmin for optimal application functionality and intelligent decision support.</p>
                         
                     </div>
                 </div>
