Update skills section.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     In 2020 I created a brand identity and marketing plan for my business Wicked Kitchen, maintaining all brand content,
                                     print and web material. My diverse client portfolio includes notable entities such as the Government of NL, Royal Newfoundland Constabulary 
                                     and the George Street Association, 
-                                    showcasing a wealth of experience in delivering creative solutions. Tools of choice: Adobe Creative Suite, Corel Draw</li>
+                                    showcasing a wealth of experience in delivering creative solutions. Tools of choice: Adobe Creative Suite, Corel Draw.</li>
                                 <li><span>Software Development Student</span><br>Engaged in a dynamic software development curriculum, 
                                     I utilize tools such as VS Code, PyCharm, and React for front-end development. My skills extend to Python and JavaScript, 
                                     with ongoing exploration into Java, databases, AWS Cloud development, and cybersecurity practices. 
