Update my services

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <h2>Web Design</h2>
                     <p>Crafting visually stunning and user-friendly websites, 
                         ensuring a seamless digital experience 
-                        for clients and their audiences./p>
+                        for clients and their audiences.</p>
                 </div>
                 <div>
                     <i class="fa-solid fa-crop"></i>
